// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert should be possible to specify options 1`] = `
"import React from \\"react\\";

const MyComponent = props => (
  <svg width={88} height={88} viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g
      stroke=\\"currentColor\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
);

export default MyComponent;
"
`;

exports[`convert should convert 1`] = `
"import React from \\"react\\";

const MyComponent = props => (
  <svg width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 88 88\\" {...props}>
    <title>Dismiss</title>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37L37 51M51 51L37 37\\" />
    </g>
  </svg>
);

export default MyComponent;
"
`;
